fix(styles): don't use `.fit` class on mobiles

--- a/src/css/responsive/mobiles.less
+++ b/src/css/responsive/mobiles.less
@@ -3,6 +3,13 @@
 		font-size: 14px;
 	}
 
+	.fit {
+		align-items: stretch;
+		display: block;
+		min-height: 0;
+		justify-content: flex-start;
+	}
+
 	#header {
 		font-size: inherit;
 
